@@ -4,6 +4,7 @@ version 0.11.0-pre15:
 	* MSN works again
 	* Fixed a little segfault when images are links
 	* Redid the about box again.
+	* Fixed a nice little bug with the manual browser command
 
 version 0.11.0-pre14 (06/17/2001):
 	* Fixed a segfault with Oscar's account confirmation
